orm-tests/tests/snapshots/query_code_block__complex_code_block_with_sweet_macro_block_and_object_partial_and_arithementic_ops-2.snap
---
source: surreal-orm-tests/tests/query_code_block.rs
expression: created_stats_statement.fine_tune_params()
---
CREATE weapon_stats SET averageStrength = {
LET $strengths = $_param_00000001;

LET $total = math::sum($strengths);

LET $count = count($strengths);

RETURN math::ceil(((($total / $count) * ($count * $total)) / ($total + $_param_00000002)) * $_param_00000003);
};
